--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import"../css/reset.css";@import"../css/grid.css";
+@import"../css/reset.css";/*@import"../css/grid.css"; */
 @import url(http://fonts.googleapis.com/css?family=Oswald);
 @import url(http://fonts.googleapis.com/css?family=Playball);
 body{
@@ -57,7 +57,7 @@ h3{
 .color1{color:#ee5e3d;}
 .tlinks{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
 
-/********************** Content ************************/
+/******************** content ******************/
 /*section{ position:relative; z-index:5;}*/
 #page1{
 	width:960px;
@@ -67,10 +67,17 @@ h3{
 	margin-bottom:125px;
 	padding-bottom:72px;
 }
-.text1{
-	padding:9px 0 0 0;
+.container{
+	margin-left:auto;
+	margin-right:auto;
+	width:960px;
+	position:relative;
 }
 .box{
+	float:left;
+	position:relative;
+	margin:0 10px;
+	width:300px;
 	padding:15px 0 0 0;
 }
 .dropcap{
